@@ -1,0 +1,5 @@
+# logwarn 1.0.11 state for "logfile"
+INODENUM="18554995"
+LINENUM="8"
+POSITION="161"
+MATCHING="true"
